minor overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,6 @@ body,
 .App {
   width: 100%;
   max-width: 100%;
-  overflow-x: hidden;
 }
 body {
   margin: 0;
